# kauth

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5AuthConfig.cmake.in  KF6AuthConfig.cmake.in  README.md  conanfile.py  metainfo.yaml
autotests/: BackendsManager.cpp  BackendsManager.h  CMakeLists.txt  HelperTest.cpp  SetupActionTest.cpp  TestBackend.cpp  TestBackend.h  TestHelper.cpp  TestHelper.h  foo.policy  foo_actions.actions  pythontest.py
cmake/: FindPolkitQt-1.cmake  FindPolkitQt.cmake  KF5AuthMacros.cmake  KF6AuthMacros.cmake  rules_PyKF5.py
examples/: CMakeLists.txt  client.cpp  helper.cpp
po/af/: kauth5_qt.po
po/ar/: kauth5_qt.po
po/as/: kauth5_qt.po
po/ast/: kauth5_qt.po
po/az/: kauth5_qt.po
po/be/: kauth5_qt.po
po/be@latin/: kauth5_qt.po
po/bg/: kauth5_qt.po
po/bn/: kauth5_qt.po
po/bn_IN/: kauth5_qt.po
po/br/: kauth5_qt.po
po/bs/: kauth5_qt.po
po/ca/: kauth5_qt.po
po/ca@valencia/: kauth5_qt.po
po/crh/: kauth5_qt.po
po/cs/: kauth5_qt.po
po/csb/: kauth5_qt.po
po/cy/: kauth5_qt.po
po/da/: kauth5_qt.po
po/de/: kauth5_qt.po
po/el/: kauth5_qt.po
po/en_GB/: kauth5_qt.po
po/eo/: kauth5_qt.po
po/es/: kauth5_qt.po
po/et/: kauth5_qt.po
po/eu/: kauth5_qt.po
po/fa/: kauth5_qt.po
po/fi/: kauth5_qt.po
po/fr/: kauth5_qt.po
po/fy/: kauth5_qt.po
po/ga/: kauth5_qt.po
po/gd/: kauth5_qt.po
po/gl/: kauth5_qt.po
po/gu/: kauth5_qt.po
po/ha/: kauth5_qt.po
po/he/: kauth5_qt.po
po/hi/: kauth5_qt.po
po/hne/: kauth5_qt.po
po/hr/: kauth5_qt.po
po/hsb/: kauth5_qt.po
po/hu/: kauth5_qt.po
po/hy/: kauth5_qt.po
po/ia/: kauth5_qt.po
po/id/: kauth5_qt.po
po/is/: kauth5_qt.po
po/it/: kauth5_qt.po
po/ja/: kauth5_qt.po
po/ka/: kauth5_qt.po
po/kk/: kauth5_qt.po
po/km/: kauth5_qt.po
po/kn/: kauth5_qt.po
po/ko/: kauth5_qt.po
po/ku/: kauth5_qt.po
po/lb/: kauth5_qt.po
po/lt/: kauth5_qt.po
po/lv/: kauth5_qt.po
po/mai/: kauth5_qt.po
po/mk/: kauth5_qt.po
po/ml/: kauth5_qt.po
po/mr/: kauth5_qt.po
po/ms/: kauth5_qt.po
po/nb/: kauth5_qt.po
po/nds/: kauth5_qt.po
po/ne/: kauth5_qt.po
po/nl/: kauth5_qt.po
po/nn/: kauth5_qt.po
po/oc/: kauth5_qt.po
po/or/: kauth5_qt.po
po/pa/: kauth5_qt.po
po/pl/: kauth5_qt.po
po/ps/: kauth5_qt.po
po/pt/: kauth5_qt.po
po/pt_BR/: kauth5_qt.po
po/ro/: kauth5_qt.po
po/ru/: kauth5_qt.po
po/se/: kauth5_qt.po
po/si/: kauth5_qt.po
po/sk/: kauth5_qt.po
po/sl/: kauth5_qt.po
po/sq/: kauth5_qt.po
po/sr/: kauth5_qt.po
po/sr@ijekavian/: kauth5_qt.po
po/sr@ijekavianlatin/: kauth5_qt.po
po/sr@latin/: kauth5_qt.po
po/sv/: kauth5_qt.po
po/ta/: kauth5_qt.po
po/te/: kauth5_qt.po
po/tg/: kauth5_qt.po
po/th/: kauth5_qt.po
po/tr/: kauth5_qt.po
po/tt/: kauth5_qt.po
po/ug/: kauth5_qt.po
po/uk/: kauth5_qt.po
po/uz/: kauth5_qt.po
po/uz@cyrillic/: kauth5_qt.po
po/vi/: kauth5_qt.po
po/wa/: kauth5_qt.po
po/x-test/: kauth5_qt.po
po/xh/: kauth5_qt.po
po/zh_CN/: kauth5_qt.po
po/zh_HK/: kauth5_qt.po
po/zh_TW/: kauth5_qt.po
poqm/af/: kauth5_qt.po  kauth6_qt.po
poqm/ar/: kauth5_qt.po  kauth6_qt.po
poqm/as/: kauth5_qt.po  kauth6_qt.po
poqm/ast/: kauth6_qt.po
poqm/az/: kauth6_qt.po
poqm/be/: kauth5_qt.po  kauth6_qt.po
poqm/be@latin/: kauth5_qt.po  kauth6_qt.po
poqm/bg/: kauth6_qt.po
poqm/bn/: kauth5_qt.po  kauth6_qt.po
poqm/bn_IN/: kauth5_qt.po  kauth6_qt.po
poqm/br/: kauth5_qt.po  kauth6_qt.po
poqm/bs/: kauth5_qt.po  kauth6_qt.po
poqm/ca/: kauth5_qt.po  kauth6_qt.po
poqm/ca@valencia/: kauth5_qt.po  kauth6_qt.po
poqm/crh/: kauth5_qt.po  kauth6_qt.po
poqm/cs/: kauth5_qt.po  kauth6_qt.po
poqm/csb/: kauth5_qt.po  kauth6_qt.po
poqm/cy/: kauth5_qt.po  kauth6_qt.po
poqm/da/: kauth5_qt.po  kauth6_qt.po
poqm/de/: kauth5_qt.po  kauth6_qt.po
poqm/el/: kauth5_qt.po  kauth6_qt.po
poqm/en_GB/: kauth5_qt.po  kauth6_qt.po
poqm/eo/: kauth5_qt.po  kauth6_qt.po
poqm/es/: kauth5_qt.po  kauth6_qt.po
poqm/et/: kauth5_qt.po  kauth6_qt.po
poqm/eu/: kauth5_qt.po  kauth6_qt.po
poqm/fa/: kauth5_qt.po  kauth6_qt.po
poqm/fi/: kauth5_qt.po  kauth6_qt.po
poqm/fr/: kauth5_qt.po  kauth6_qt.po
poqm/fy/: kauth5_qt.po  kauth6_qt.po
poqm/ga/: kauth5_qt.po  kauth6_qt.po
poqm/gd/: kauth5_qt.po  kauth6_qt.po
poqm/gl/: kauth5_qt.po  kauth6_qt.po
poqm/gu/: kauth5_qt.po  kauth6_qt.po
poqm/ha/: kauth5_qt.po  kauth6_qt.po
poqm/he/: kauth5_qt.po  kauth6_qt.po
poqm/hi/: kauth5_qt.po  kauth6_qt.po
poqm/hne/: kauth5_qt.po  (+1 more)
src/: AuthBackend.cpp  AuthBackend.h  BackendsConfig.h.cmake  BackendsManager.cpp  BackendsManager.h  CMakeLists.txt  ConfigureChecks.cmake  HelperProxy.cpp  HelperProxy.h  Messages.sh  action.cpp  action.h  actionreply.h  executejob.cpp  executejob.h  helpersupport.cpp  helpersupport.h  kauth-index.qdoc  kauth.h  kauth.qdoc  kauth.qdocconf  kauthaction.cpp  kauthaction.h  kauthactionreply.cpp  kauthactionreply.h  kauthdebug.cpp  kauthdebug.h  kauthexecutejob.cpp  kauthexecutejob.h  kauthhelpersupport.cpp  kauthhelpersupport.h  kauthobjectdecorator.cpp  kauthobjectdecorator.h  objectdecorator.cpp  objectdecorator.h
src/backends/dbus/: DBusHelperProxy.cpp  DBusHelperProxy.h  dbus_policy.stub  dbus_service.stub  org.kde.kf5auth.conf  org.kde.kf5auth.xml  org.kde.kf6auth.xml
src/backends/fake/: FakeBackend.cpp  FakeBackend.h  kauth-policy-gen-polkit.cpp
src/backends/fakehelper/: FakeHelperProxy.cpp  FakeHelperProxy.h
src/backends/mac/: AuthServicesBackend.cpp  AuthServicesBackend.h  kauth-policy-gen-mac.cpp
src/backends/policykit/: PolicyKitBackend.cpp  PolicyKitBackend.h  kauth-policy-gen-polkit.cpp
src/backends/polkit-1/: Polkit1Backend.cpp  Polkit1Backend.h  kauth-policy-gen-polkit1.cpp
src/compatheaders/: KAuth  KAuthAction  KAuthActionReply  KAuthExecuteJob  KAuthHelperSupport  KAuthObjectDecorator  kauth.h  kauthaction.h  kauthactionreply.h  kauthexecutejob.h  kauthhelpersupport.h  kauthobjectdecorator.h
src/policy-gen/: policy-gen.cpp  policy-gen.h
test_package/: CMakeLists.txt  conanfile.py  main.cpp
(+208 files in other folders)
